k8s/base/cassandra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  namespace: thehive
  labels:
    app.kubernetes.io/name: cassandra
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: cassandra
  ports:
    - name: cql
      port: 9042
      targetPort: cql
    - name: intra-node
      port: 7000
      targetPort: intra-node
