k8s/base/cassandra/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cassandra
  namespace: thehive
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cassandra
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: thehive
      ports:
        - protocol: TCP
          port: 9042
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cassandra
      ports:
        - protocol: TCP
          port: 7000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cassandra
      ports:
        - protocol: TCP
          port: 7000
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
